# medscribe-rcm-mcp

./: .gitignore  LICENSE  NOTICE  README.md  SECURITY.md  audit_log.py  consent.py  consent_middleware.py  data.json  desktop.ini  fix.py  fix_def.py  fix_lazy.py  fix_redact.py  launcher.py  main.py  make_test_token.py  models.py  nos_nec_sentinel.py  patch_meta.py  patch_meta2.py  payer_rules.json  phi_guard.py  pyproject.toml  rate_limiter.py  render.yaml  requirements.txt  run_server.bat  server.py  server_backup_20260416_2323.py  show_meta.py  test_security.py  test_tools.py  tier_guard.py  tool2_suggest_codes_with_context.py  tool_charge_capture.py  tool_coverage_lookup.py  tool_extract.py  webhook_handler.py
data/: carc_codes.json  mue_limits.json  ncci_edits.json  payer_rules.json
docs/: db_schema_reference.sql  supabase_schema.sql
scripts/: import_icd10_tabular.py
