[project]
name = "medscribe-rcm-mcp"
version = "0.1.0"
description = "MedScribe RCM-FastMCP Server — ICD-10, HCPCS, NCCI/MUE, denial resolution"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.25.0",
    "cachetools>=7.0.0",
    "fastmcp>=3.2.0",
    "httpx>=0.28.1",
    "pydantic>=2.0.0",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "python-jose[cryptography]>=3.3.0",
    "spacy>=3.8.0",
    "supabase>=2.15.0",
]

[project.scripts]
medscribe-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
